--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dev-utils": "^10.2.0",
     "react-dom": "^16.12.0",
     "react-rangeslider": "^2.2.0",
+    "react-redux": "^7.2.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
